syntax = "proto3";

package go.micro.service.post_svc;

service Post {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {
    }
    rpc GetPostList (GetPostListRequest) returns (GetPostListResponse) {
    }
    rpc GetPostByIds (GetPostByIdsRequest) returns (GetPostByIdsResponse) {
    }
    rpc GetMengerPostList(GetMengerPostListRequest) returns (GetMengerPostListResponse) {
    }
}

message GetMengerPostListRequest {
    int64 mengerId = 1;
    int32 pageNum = 2;
    int32 pageSize = 3;
}

message GetMengerPostListResponse {
     repeated  PostInfo postInfos = 1;
}


message GetPostByIdsRequest {
   repeated int64 ids = 1;
}

message GetPostByIdsResponse {
   repeated  PostInfo postInfos = 1;
}

message CreatePostRequest {
    int64 id = 1;
    int64 mengerId = 2;
    int64 categoryId = 3;
    int32 type = 4;
    string title = 5;
    string description = 6;
    repeated PostItem items = 7;
}

message CreatePostResponse {
    string errorMsg = 999;
}

message GetPostListRequest {
    int64 categoryId = 1;
    int64 lastId = 2;
}

message GetPostListResponse {
    repeated PostInfo postInfos = 1;
    string errorMsg = 999;
}

message PostInfo {
    int64 id = 1;
    int32 type = 2;
    string title = 3;
    string description = 4;
    int64 mengerId = 5;
    repeated PostItem item = 6;
    int64 createAt = 7;
}

message PostItem {
    int64 storeId = 1;
    int32 index = 2;
    int32 type = 3;
}



